package mei.designpattern.creational.bridge.imageviewer;

public class Matrix {
}
